Display results in the html
- parse the results of the API call and create an HTML element for each

--- a/index.html
+++ b/index.html
@@ -8,22 +8,30 @@
         var head = document.head;
         var script = document.createElement('script');
         var apiKey = 'p169gzr369njgueyv6e489a7';
-        var resultParser = 'parseResults';
+        var resultParser = 'displayResults';
         var endpoint = 'https://openapi.etsy.com/v2/listings/active';
         var url = endpoint + '.js?api_key=' + apiKey + '&callback=' + resultParser;
+
         script.setAttribute('src', url);
         script.setAttribute('type', 'application/javascript');
         head.appendChild(script);
         head.removeChild(script);
       }
 
-      function parseResults (data) {
-        console.log(data);
+      function displayResults (data) {
+        var resultContainer = document.getElementById('result-container');
+        resultContainer.innerHTML = '';
+        data.results.map(function(item) {
+          var listingElement = document.createElement('div');
+          listingElement.innerHTML = item.title;
+          resultContainer.appendChild(listingElement);
+        });
       }
 
     </script>
   </head>
   <body>
     <button onclick="getEtsyCatalog()">See listings</button>
+    <div id="result-container"></div>
   </body>
 </html>
