--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>OrderGroove</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.js" type="application/javascript"></script>
     <script src="js/app.js" type="application/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 
@@ -13,10 +14,12 @@
     </form>
 
     <div id="result-container" style="display:none;">
+      <div id="item-list"></div>
       <span id="current-page"></span>
       <button onclick="scope.getPreviousPage()" id="previous-page-btn">Previous Page</button>
       <button onclick="scope.getNextPage()" id="next-page-btn">Next Page</button>
-      <div id="item-list"></div>
-    <div>
+    </div>
+
+    <div id="loading-animation">Loading</div>
   </body>
 </html>
