--- a/index.html
+++ b/index.html
@@ -5,21 +5,36 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.js" type="application/javascript"></script>
     <script src="js/app.js" type="application/javascript"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   </head>
   <body>
+    <div class="container">
 
-    <form name="searchForm" onsubmit="return scope.search();">
-      <input type="text" name="keywords" id="keywords-input" />
-      <input type="submit" value="Search">
-    </form>
+      <form class="row form-inline" name="searchForm" onsubmit="return scope.search();">
+        <div class="form-group">
+          <input type="text" class="form-control" name="keywords" id="keywords-input" />
+        </div>
+        <button type="submit" class="btn btn-default">Search</button>
+      </form>
 
-    <div id="result-container" style="display:none;">
-      <div id="item-list"></div>
-      <span id="current-page"></span>
-      <button onclick="scope.getPreviousPage()" id="previous-page-btn">Previous Page</button>
-      <button onclick="scope.getNextPage()" id="next-page-btn">Next Page</button>
+      <div class="row" id="result-container" style="display:none;">
+
+        <table class="table table-striped table-bordered">
+          <tbody id="item-list"></tbody>
+        </table>
+
+        <div id="pagination-container">
+          <span id="current-page"></span>
+          <button onclick="scope.getPreviousPage()" class="btn btn-default active" id="previous-page-btn">Previous Page</button>
+          <button onclick="scope.getNextPage()" class="btn btn-default active" id="next-page-btn">Next Page</button>
+        </div>
+
+      </div>
+
+      <div class="row" id="no-items-found" style="display:none;">No items match your search</div>
+
+      <div class="row" id="loading-animation">Loading </div>
+
     </div>
-
-    <div id="loading-animation">Loading</div>
   </body>
 </html>
